--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
       </div>
       <div class="index-our-mission-text">
         <h2>OUR MISSION</h2>
-        <p class="index-our-mission-quote"> "We help you grow your business on social media 
-            by turning your followers into clients. You film the content that we script. 
-            We take care of the rest! Social media is where your customers are and we make sure they find you."
+        <p class="index-our-mission-quote"> "At Social Brand Boost, we believe that if you’re not selling, then you’re being sold. 
+          We understand that social media is the best way to reach as many consumers as possible. We provide our clients with a 
+          content marketing and social media management service that eliminates the guesswork from their online strategy. 
+          If you’d like to boost your brand, then book a call."
         </p>
         <div class="index-our-mission-ceo">
           <h4>Dylan James</h4>
