--- a/index.html
+++ b/index.html
@@ -194,13 +194,13 @@
       <div>
         <h5>How do I know if it's right for me?</h5>
         <p> If you are a business owner or you have a personal brand and want to grow and sell on social media and you are willing 
-          to invest in a growth marketing strategy that has already been proven to work then book a call. 
+          to invest in a growth marketing strategy that has already been proven to work, then book a call. 
           Do not call if you are not looking to invest in yourself and your business.
         </p>
         <h5>Why should I have a personal brand?</h5>
         <p> If you have a skill, a trade, a service, or a good, that you can market and sell, then you should have a personal brand.
           Building your personal brand is about intentionally shaping how others see you to attract opportunities, build trust, and stand out. 
-          All of the content you watch on YouTube, consume on TikTok, Interact with on Instagram or Facebook, is the product of a personal brand. 
+          All of the content you watch on YouTube, consume on TikTok, interact with on Instagram, or like on Facebook, is the product of a personal brand. 
         </p>
         <h5>Why should my business be on social media?</h5>
         <p> Over 5.2 billion people use social media globally as of late 2024/early 2025, representing over 60% of the 
@@ -208,8 +208,8 @@
           daily, covering about 73% of the nation's population, with Instagram, YouTube, and Facebook being the most popular platforms.
           <br><br>As of 2025, billions use social media for shopping, with around 5.24 billion users worldwide actively on platforms, 
           and a significant portion buying goods and services. About 48% of users have bought directly on social media apps, while globally, over 72% 
-          research products there, with social commerce sales projected to hit $1.2 trillion globablly end of year.
-          <br><br>If you truly want to sell to as many people as possible, then your business need to be on social media. 
+          research products there, with social commerce sales projected to hit $1.2 trillion globally end of year.
+          <br><br>If you truly want to sell to as many people as possible, then your business needs to be on social media. 
         </p>
         <h5>How time consuming is it?</h5>
         <p> Most of the workload is done for you by us. You just need to film. The time it takes you to film can very between plans. 
@@ -218,7 +218,7 @@
         </p>
         <h5>What kind of results can I expect to see?</h5>
         <p> Results will vary depending on your niche, target audience, and posting frequency. Posting frequently and consistently is the 
-          key to succes on social media. We will make a framework for you. You just need to adhere to it and film content that we script for you. 
+          key to success on social media. We will make a framework for you. You just need to adhere to it and film the content that we script. 
         </p>
         <h5>What is short form content?</h5>
         <p> Short form content is a video, 60 seconds or less, in 9:16 aspect ratio or vertical format. 
@@ -286,7 +286,7 @@
           your business needs in order to grow online and expand your empire.<br><br>
           We look forward to working with you!</p>
         <!-- FOOTER SOCIAL MEDIA DIRECTORY -->
-        <p class="footer-main-sm-directory">Checkout our social media to get a better 
+        <p class="footer-main-sm-directory"> Feel free to check out our social media to get a better 
           understanding of what we do and how we can help you!</p>
       </div>
       <!-- FOOTER SOCIAL MEDIA LINKS -->
