--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
   <main>
     <div class="wrapper-main index-main-flex">
       <div class="index-main-text">
-        <p class="index-main-text-slogan">CHECKMATE YOUR COMPETITION WITHOUT<br>LIFTING A FINGER ONLINE.</p>        <!--GROW FAST.<br>SELL MORE.<br>DO LESS.-->
+        <p class="index-main-text-slogan">CHECKMATE YOUR COMPETITION WITHOUT<br>LIFTING A FINGER ONLINE.</p>    <!--GROW FAST.<br>SELL MORE.<br>DO LESS.-->
         <!-- FOR PHONES & SMALL TABLETS WITH TALL SCREENS (PORTRAIT) -->
-        <p class="index-main-text-slogan-tall">CHECKMATE YOUR<br>COMPETITION WITHOUT<br>LIFTING A<br>FINGER ONLINE.</p>        <!--GROW<br>FAST.<br>SELL<br>MORE.<br>DO<br>LESS.-->
+        <p class="index-main-text-slogan-tall">CHECKMATE YOUR<br>COMPETITION WITHOUT<br>LIFTING A<br>FINGER ONLINE.</p>    <!--GROW<br>FAST.<br>SELL<br>MORE.<br>DO<br>LESS.-->
         <h1 class="index-main-text-title">Monthly Social Media Management Services</h1>
       </div>
     </div>
@@ -75,8 +75,8 @@
       </div>
       <div class="index-our-mission-text">
         <h2>OUR MISSION</h2>
-        <p class="index-our-mission-quote"> "At Social Brand Boost, we believe that if you’re not selling, then you’re being sold. 
-          We understand that social media is the best way to reach as many consumers as possible. We provide our clients with a 
+        <p class="index-our-mission-quote"> "Here at Social Brand Boost, we know that if you’re not selling, then you’re being sold. 
+          We understand that social media is the best way to reach as many consumers as possible. So we provide our clients with a 
           content marketing and social media management service that eliminates the guesswork from their online strategy. 
           If you’d like to boost your brand, then book a call."
         </p>
@@ -225,13 +225,13 @@
           These consist of Instagram Reels, TikTok's, Youtube Shorts, etc.
         </p>
         <h5>What social media platforms do you work with?</h5>
-        <p> Instagram, TikTok, Youtube, Facebook, Linkedin, and X (formerly Twitter). We prefer Instagram because, as of now, it's the best platform to 
+        <p> Instagram, TikTok, Youtube, Facebook, and X (formerly Twitter). We prefer Instagram because, as of now, it's the best platform to 
           grow and sell on social media for new and established business owners. Instagram and TikTok target a younger demographic, whereas Facebook and Linkedin 
           target an older demographic. YouTube favors educational videos, whereas X favors polarizing videos.
         </p>
         <h5>How long does it take to see results?</h5>
-        <p> You will start seeing results when we start posting videos. After completing the strategy call, researching, scripting, filming, and editing 
-          takes about 3 weeks and then the posting begins!
+        <p> You will start seeing results when we start posting videos. After completing the strategy call, researching, scripting, filming, and editing, 
+          it takes about 3 weeks and then the posting begins!
         </p>
       </div>
     </div>
@@ -248,11 +248,11 @@
       </div>
       <div class="testimonial">
         <img src="img/headshot.2.jpg" alt="testimonial">
-        <p>"Social Brand Boost has structured my social media so that all the guess-work is no longer a thing! Thank you!!"</p>
+        <p>"Social Brand Boost has structured my social media so that all the guess-work is eliminated! Thank you!!"</p>
       </div>
       <div class="testimonial">
         <img src="img/headshot.3.jpg" alt="testimonial">
-        <p>"I new there had to be a better way to get clients than just word of mouth and door-to-door sales. 
+        <p>"I knew there had to be a better way to get clients than just word of mouth and door-to-door sales. 
             Social Brand Boost made it easy for me to market online."</p>
       </div>
       <div class="testimonial">
